--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,18 @@ cache:
 
 matrix:
   include:
+    - php: '5.6'
+    - php: '7.0'
     - php: '7.1'
-    - php: '7.2'
-    - php: '7.3'
-    - php: '7.4snapshot'
+    - php: '7.1'
+      env: deps='low'
+    - php: '7.1'
+      env: deps='beta'
 
 install:
-  - composer update --prefer-dist --no-progress --no-suggest --ansi
+  - if [[ ! $deps ]]; then composer update --prefer-dist --no-progress --no-suggest --ansi; fi
+  - if [[ $deps = 'low' ]]; then composer update --prefer-dist --no-progress --no-suggest --prefer-stable --prefer-lowest --ansi; fi
+  - if [[ $deps = 'beta' ]]; then composer config minimum-stability beta && composer update --prefer-dist --no-progress --no-suggest --ansi; fi
 
 script:
   - vendor/bin/phpunit --coverage-text
