--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,16 @@
         }
     ],
     "require":      {
-        "php": ">=7.1",
-        "knplabs/gaufrette": "^0.8.2|^0.9",
-        "symfony/config": "^3.4|^4.2|^5.0",
-        "symfony/dependency-injection": "^3.4|^4.2|^5.0",
-        "symfony/framework-bundle": "^3.4|^4.2|^5.0"
+        "knplabs/gaufrette": "~0.1.7|~0.2|~0.3|~0.4|~0.5|~0.6",
+        "symfony/config": "~2.1|~3.0|~4.0",
+        "symfony/dependency-injection": "~2.1|~3.0|~4.0",
+        "symfony/framework-bundle": "~2.0|~3.0|~4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.5",
-        "symfony/console": "^3.4|^4.0|^5.0",
-        "symfony/filesystem": "^3.4|^4.0|^5.0",
-        "symfony/yaml": "^3.4|^4.0|^5.0"
+        "phpunit/phpunit": "~4.8.35",
+        "symfony/console": "~2.1|~3.0|~4.0",
+        "symfony/filesystem": "~2.1|~3.0|~4.0",
+        "symfony/yaml": "~2.1|~3.0|~4.0"
     },
     "autoload":     {
         "psr-4": {
@@ -35,7 +34,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.7.x-dev"
+            "dev-master": "0.5.x-dev"
         }
     }
 }
